objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Internal</fullName>
        <description>Leads generated by Contracting, Producer Onboarding, or Producer Support.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Info Packet Created</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Member Lead</fullName>
        <description>Leads generated by the Member Enrollment</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Info Packet Created</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales</fullName>
        <description>Leads generated by the Sales Team.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>Info Packet Created</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AcctOpp_Lock__c</fullName>
        <defaultValue>true</defaultValue>
        <label>AcctOpp Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Address_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agree_to_SOB__c</fullName>
        <description>Field used in Vlocity OS to capture whether a Lead agreed to the Statement of Beliefs.</description>
        <label>Agree to SOB</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Suite_Apartment__c</fullName>
        <description>Specific Building, Suite or Apartment where the Lead resides</description>
        <label>Building / Suite / Apartment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continue_Save_for_Later__c</fullName>
        <description>This field have the save for later information of the omniscript in Q/Q</description>
        <label>Continue Save for Later</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Level__c</fullName>
        <label>Contract Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contract_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Contract_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Name of the County where the Lead is located</description>
        <inlineHelpText>Please enter the name of the County where the lead is located</inlineHelpText>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <description>This field gives the profile of the user who created this lead (used in the back end)</description>
        <formula>CreatedBy.Profile.Name</formula>
        <inlineHelpText>This field gives the profile of the user who created this lead (used in the back end)</inlineHelpText>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demographic_Groups__c</fullName>
        <inlineHelpText>What customer demographic groups do you currently work with?</inlineHelpText>
        <label>Demographic Groups</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Filipino</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Latin/Spanish</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependents_DOB__c</fullName>
        <inlineHelpText>List each dependent with their date of birth.</inlineHelpText>
        <label>Dependents, DOB</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_Effective_Date__c</fullName>
        <label>Desired Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used in the Vlocity OS to determine whether a Lead is eligible based on the State they live in.</description>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ethnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Address__c</fullName>
        <description>Address comming from google services</description>
        <label>Google Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hear_about_us__c</fullName>
        <label>Hear about us</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Internet Search</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Lost_Reason__c</fullName>
        <label>Lead Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commissions</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t do health share</fullName>
                </value>
                <value>
                    <fullName>Employer Paid Plan</fullName>
                </value>
                <value>
                    <fullName>Financial Reasons</fullName>
                </value>
                <value>
                    <fullName>Group only</fullName>
                </value>
                <value>
                    <fullName>Insufficient Coverage</fullName>
                </value>
                <value>
                    <fullName>Lost in Verification</fullName>
                </value>
                <value>
                    <fullName>Network issues</fullName>
                </value>
                <value>
                    <fullName>No contact</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of Sharing Eligibility</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of Statement of Beliefs</fullName>
                </value>
                <value>
                    <fullName>Non-acceptance of Waiting Periods</fullName>
                </value>
                <value>
                    <fullName>No response</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physician Network</fullName>
                </value>
                <value>
                    <fullName>Too many health shares</fullName>
                </value>
                <value>
                    <fullName>Traditional Health Plan</fullName>
                </value>
                <value>
                    <fullName>Working with Producer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Bill_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>List Bill Producer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Partner, Dependent, Primary Member</value>
            </filterItems>
            <infoMessage>Producer should be List Bill Certified</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (List Bill Producer)</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_Bill__c</fullName>
        <formula>$RecordType.Name = &quot;List Bill&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>List Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List_of_States__c</fullName>
        <description>List of States</description>
        <label>List of States</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <label>Medical</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Membership_Size__c</fullName>
        <label>Membership Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Member + 1</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>6 + Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please use the Associate Account if parent account is not known.</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads (Parent Account)</relationshipLabel>
        <relationshipName>Leads5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <label>Preferred Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Haitian Creole</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Prefer not to answer</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Tagalog</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Language_Spoken__c</fullName>
        <description>the primary language spoken in your household</description>
        <label>Primary Language Spoken</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Close_Date__c</fullName>
        <label>Projected Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quote_Offered__c</fullName>
        <label>Quote Offered</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Sales Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Temp,VP of Sales,Regional Sales Director</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSN_ITIN__c</fullName>
        <label>SSN/ITIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Team_Referral__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Team Referral</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicing_Representative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servicing Representative</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Temp,VP of Sales,Regional Sales Director,State Sales Manager</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Sales_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Sales Director</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Temp,VP of Sales,Regional Sales Director,State Sales Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VP_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VP Sales</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>VP of Sales, Temp</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this lead.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, the field holds the term that was searched on.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether lead hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Adjudication__c</fullName>
        <formula>IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Approved&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Approved.png&quot;, &quot;Approved&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Pending&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Pending.png&quot;, &quot;Pending&quot;, 14, 14),&apos;&apos;) 
+ 
IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c, &quot;Declined&quot;), 
IMAGE(&quot;https://salesforce.verifiedfirst.com/images/Declined.png&quot;, &quot;Declined&quot;, 14, 14),&apos;&apos;) 
+ 
IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c = &quot;-&quot;, 
&apos;To Be Determined&apos;, &apos; &apos; + vfirst__Site_Guest_Access_Helper__r.vfirst__Adjudication__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Adjudication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vfirst__Initiate_Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Initiate Background Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vfirst__Site_Guest_Access_Helper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Guest Access Helper</label>
        <referenceTo>vfirst__Site_Guest_Access_Helper__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vfirst__Stage__c</fullName>
        <formula>IF(vfirst__Site_Guest_Access_Helper__r.vfirst__File_Processing__c,
  &apos;File Processing...&apos;,
  IF(OR(OR(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:app_pending&apos;), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;)), CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;waiting_applicant&apos;)), 
    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived__c, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Archived_By__c == &apos;Applicant&apos;, 
        &apos;Refused Invitation&apos;, 
        &apos;Withdrawn&apos; 
      ), 
      IF(CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;pre_pull&apos;), 
        &apos;Partially Ordered&apos;, 
        IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;ready_to_order&apos;,
          &apos;Ready to Order&apos;,
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Invite_Send_Error__c,
            &apos;Notification Email Bounced&apos;, 
            &apos;Waiting on Applicant&apos; 
          ) 
        ) 
      ) 
    ), 
    IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:pending&apos;, CONTAINS(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c, &apos;partial&apos;)), 
      &apos;Partially Complete&apos;, 
      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;applicant_declined&apos;, 
        &apos;Applicant Declined&apos;, 
        IF(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:ready&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete&apos;), 
          &apos;Complete&apos;, 
          IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;canceled&apos;, 
            &apos;Canceled&apos;, 
            IF(OR(OR(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;x:email&apos;, vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_email&apos;), vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;waiting_applicant-invitation_sms&apos;), 
              &apos;Invitation Sent&apos;, 
              IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-need_review&apos;, 
                &apos;Complete - In Need of Review&apos;, 
                IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-approved&apos;, 
                  &apos;Complete - Approved&apos;, 
                  IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-completed&apos;, 
                  &apos;Complete - Completed&apos;, 
                    IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-preadverse&apos;, 
                    &apos;Complete - Pre-Adverse Action&apos;, 
                      IF(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c == &apos;complete-adverse&apos;, 
                        &apos;Complete - Adverse Action&apos;, 
                        IF(ISBLANK(vfirst__Site_Guest_Access_Helper__r.vfirst__Status__c), 
                          &apos;&apos;, 
                          &apos;File Processing...&apos; 
                        ) 
                      ) 
                    ) 
                  ) 
                ) 
              ) 
            ) 
          ) 
        ) 
      ) 
    ) 
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
</CustomObject>